# max-min-hill-climbing-algorithm

./: .Rhistory  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DESCRIPTION  FirstTalk.aux  FirstTalk.dvi  FirstTalk.nav  FirstTalk.tex  FirstTalk.toc  LICENSE  MMHC.R  Makefile  Matrix.cpp  README.md  classes.h  main.c  main.cpp  mmpc.cpp  pyproject.toml
.github/workflows/: ci.yml  publish.yml
LaTex/: report.aux  report.fdb_latexmk  report.lof  report.lot  report.out  report.tex  report.toc  report_settings.tex
LaTex/fontconfig/: cabbd14511b9e8a55e92af97fb3a0461-le32d4.cache-3
LaTex/talks/3rd talk/img/: mmhc.eps  mmpc.eps
R/: .RData  .RDataTmp  .Rhistory  code.R  data  data.R  mmhc.R  mmhc_test.R  myExample.R  run.R
app/: streamlit_app.py
bene-0.9-7/: README
bene-0.9-7/example/: run.sh
bene-0.9-7/example/resdir/: 0  0.bps  0.bss  0.slt  1  1.bps  1.bss  1.slt  2  2.bss  2.slt  3  3.bps  3.bss  3.slt  4  4.bps  4.bss  4.slt  net  ord  res  sinks
bene-0.9-7/src/: L1_get_local_scores.py  README  TODO  arcs2dot  ban_arc  build.sh  clean.sh  fdata2net.sh  gen_prior_file  get_best_net  get_best_order  get_best_parents  get_best_sinks  get_local_scores  net2parents  parents2arcs  reverse_local_scores  score_net  score_nets  split_local_scores
bene-0.9-7/util/: net2bn.sh
bene-0.9-7/www/: index.html
bene-0.9-7/www/cgi-bin/: bestnet.cgi
legacy/: NAMESPACE  README.md
legacy/man/: mmhc.Rd
legacy/src/: mmhc.h
mmhc/: DESCRIPTION  NAMESPACE
mmhc/R/: data.R  mmhc.R
mmhc/man/: mmhc-package.Rd
mmhc/src/: mmhc.cpp  mmhc.h  mmpc.cpp  rcpp_module.cpp
notebooks/: 01_quickstart.ipynb  02_custom_data.ipynb
src/: .RData  .Rhistory  2ndCode.R  MMHC.R  code.R  code.cpp  combine.cpp  data  main.c  main.cpp  mmhc.R  mmhc.cpp  mmhc.h  mmhc_test.R  mmpc.cpp  newCode.R  newMMPC.cpp  rcpp_module.cpp  run.R  save.txt  score.cpp  test.cpp  valgrind.txt
src/mmhc/: __init__.py  _types.py  datasets.py  graph_utils.py  hillclimb.py  independence.py  mmhc.py  mmpc.py  plotting.py  scoring.py
talks/: .RData  .Rhistory  FirstTalk.aux  FirstTalk.dvi  FirstTalk.nav  FirstTalk.tex  FirstTalk.toc  chi.eps  chi1.eps  chi3.eps  chi4.eps
talks/2nd talk/: .RData  .Rhistory  2ndTalk.R  2ndTalk.aux  2ndTalk.dvi  2ndTalk.nav  2ndTalk.tex  2ndTalk.toc  Example.aux  Example.dvi  Example.nav  Example.tex  Example.toc  newCode.R  newMMPC.cpp  plot.R
talks/2nd talk/img/: backward.eps  chi.eps  chi1.eps  chi2.eps  falsePositive.eps  mmpc.eps  mmpc_bar.eps
talks/3rd talk/: .RData  .Rhistory  3rdTalk.R  3rdTalk.aux  3rdTalk.dvi  3rdTalk.nav  3rdTalk.tex  3rdTalk.toc  3rdTalk.vrb
talks/3rd talk/img/: ACMailand.eps  myFunc.eps  paperBN.eps
talks/first talk/: plot.R
talks/img/: example_part1.eps
tests/: conftest.py  test.R  test_datasets.py  test_edge_cases.py  test_graph_utils.py  test_hillclimb.py  test_independence.py  test_mmhc.py  test_mmpc.py  test_scoring.py
