[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mmhc"
version = "2.0.0"
description = "Max-Min Hill-Climbing (MMHC) Bayesian network structure learning algorithm"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{name = "Michael Wallner"}]
keywords = ["bayesian-network", "structure-learning", "mmhc", "causal-inference", "dag"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "networkx>=3.0",
    "numba>=0.57",
    "pandas>=2.0",
]

[project.urls]
Homepage = "https://github.com/pespila/max-min-hill-climbing-algorithm"
Repository = "https://github.com/pespila/max-min-hill-climbing-algorithm"
Issues = "https://github.com/pespila/max-min-hill-climbing-algorithm/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.5",
    "pre-commit>=3.0",
    "matplotlib>=3.7",
]
app = [
    "streamlit>=1.30",
    "pyvis>=0.3",
    "openpyxl>=3.1",
    "matplotlib>=3.7",
]
notebooks = [
    "jupyter>=1.0",
    "matplotlib>=3.7",
    "pyvis>=0.3",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mmhc"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
